fix(filter): description can no longer be resized + removed scrollbars

--- a/Cards-of-Runeterra/src/app/containers/home/home.component.scss
+++ b/Cards-of-Runeterra/src/app/containers/home/home.component.scss
@@ -1015,6 +1015,8 @@
   display: block;
   box-sizing: border-box;
   width: 675px;
+  resize: none;
+  overflow: hidden;
 }
 
 /* hides the increase/decrease arrows on webkit-browsers */
